fixed spacing of header and added overflow-y: scroll in css

--- a/_sass/_solo.scss
+++ b/_sass/_solo.scss
@@ -2,6 +2,7 @@
 
 html {
   font: 16px/1.5 Inconsolata, sans-serif;
+  overflow-y: scroll;
 }
 
 @media (min-width: 30rem) {
@@ -46,7 +47,7 @@ h1 {
 @media (min-width: 30rem) {
   h1 {
     font-size: 3rem;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
   }
 }
 
@@ -70,6 +71,7 @@ h2 {
 
 h3, h4, h5, h6 {
   margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
   font-size: 1rem;
   text-transform: uppercase;
 }
